дополнен swagger + обновлён uml + работа над матрицей
